--- a/assets/javascripts/discourse/templates/components/gp-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/gp-ad.hbs
@@ -3,7 +3,9 @@
         <div class="google-dfp-ad-label" style={{adTitleStyleMobile}}><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
         <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center></div>
     {{else}}
-        <div class="google-dfp-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
-        <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center></div>
+        <!--<div class="google-dfp-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>-->
+        <!--<div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center></div>-->
+
+        <h3>Test</h3>
     {{/if}}
 {{/if}}
