--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -4,7 +4,7 @@
         <!--<div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center></div>-->
         <div id={{divId}}>
             <script>
-                if(detectWidth() > 980) { googletag.cmd.push(function() { googletag.display({{adcode}}); }); }
+                if(detectWidth() > 980) { googletag.cmd.push(function() { googletag.display({{divId}}); }); }
             </script>
         </div>
         <h3>Test</h3>
@@ -13,7 +13,7 @@
         <!--<div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center></div>-->
         <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
             <script>
-                if(detectWidth() > 980) { googletag.cmd.push(function() { googletag.display({{adcode}}); }); }
+                if(detectWidth() > 980) { googletag.cmd.push(function() { googletag.display({{divId}}); }); }
             </script>
         </div>
         <h3>Test</h3>
