--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -3,7 +3,7 @@
         <div class="google-dfp-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
         <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
             <script>
-                if(detectWidth() > 980) { googletag.cmd.push(function() {googletag.display({{divId}});});}
+                if(detectWidth() <= 980) { googletag.cmd.push(function() {googletag.display({{divId}});});}
             </script>
         </div>
     {{else}}
