--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -1,5 +1,6 @@
 {{#if showAd}}
     {{#if site.mobileView}}
+        <h3>Test</h3>
         <div class="google-dfp-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
         <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
             <script>
@@ -7,6 +8,7 @@
             </script>
         </div>
     {{else}}
+        <h3>Test</h3>
         <div class="google-dfp-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
         <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
             <script>
