--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -1,7 +1,6 @@
 {{#if showAd}}
     {{#if site.mobileView}}
         <h3>Test</h3>
-        {{divId}}
         <!--<div class="google-dfp-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>-->
         <!--<div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>-->
             <!--<script>-->
@@ -10,12 +9,11 @@
         <!--</div>-->
     {{else}}
         <h3>Test</h3>
-        {{divId}}
         <!--<div class="google-dfp-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>-->
-        <!--<div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>-->
-            <!--<script>-->
-                <!--if(detectWidth() > 980) { googletag.cmd.push(function() {googletag.display({{divId}});});}-->
-            <!--</script>-->
-        <!--</div>-->
+        <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
+            <script>
+                if(detectWidth() > 980) { googletag.cmd.push(function() {googletag.display({{divId}});});}
+            </script>
+        </div>
     {{/if}}
 {{/if}}
