--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -2,7 +2,7 @@
     {{#if site.mobileView}}
         <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
         <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-            <script>if(detectWidth() <= 980) {googletag.cmd.push(function() {googletag.display({{divId}});});}</script>
+            <!--<script>if(detectWidth() <= 980) {googletag.cmd.push(function() {googletag.display({{divId}});});}</script>-->
         </div>
     {{else}}
         <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
