--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -7,14 +7,12 @@
     {{else}}
         <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
         <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-            {{#if (eq divId "'div-ad-Community_Desktop_Leaderboard_A'")}}
+            {{#if divId_da}}
                 <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_A');});}</script>
-            {{else if (eq divId "'div-ad-Community_Desktop_Leaderboard_B'")}}
-                <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_B');});}</script>
-            {{else if (eq divId "'div-ad-Community_Desktop_Leaderboard_C'")}}
+            {{else if divId_dc}}
                 <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_C');});}</script>
-            {{else if (eq divId "'div-ad-Community_Desktop_Leaderboard_D'")}}
-                <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_D');});}</script>
+            {{else}}
+                <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_B');});}</script>
             {{/if}}
         </div>
     {{/if}}
