--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -19,6 +19,20 @@
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
             <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_C');});}</script>
             </div>
+            <script type="text/discourse-plugin">
+            const TopicRoute = require("discourse/routes/topic").default;
+
+            TopicRoute.reopen({
+                activate: function() {
+                    this._super();
+                    Em.run.next(function() {
+                        window.googletag.cmd.push(() => {
+                            window.googletag.pubads().refresh();
+                        });
+                    });
+                },
+            });
+            </script>
         {{else if divId_dd}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
@@ -26,18 +40,4 @@
             </div>
         {{/if}}
     {{/if}}
-    <script type="text/discourse-plugin" version="0.8.18">
-    const TopicRoute = require("discourse/routes/topic").default;
-
-    TopicRoute.reopen({
-        activate: function() {
-            this._super();
-            Em.run.next(function() {
-                window.googletag.cmd.push(() => {
-                    window.googletag.pubads().refresh();
-                });
-            });
-        },
-    });
-    </script>
 {{/if}}
