--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -10,6 +10,8 @@
             <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_A');});}</script>
             </div>
             <script type="text/discourse-plugin" version="0.8">
+            const TopicRoute = require("discourse/routes/topic").default;
+            
             TopicRoute.reopen({
                 deactivate: function() {
                     this._super();
