--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -13,12 +13,23 @@
             const TopicRoute = require("discourse/routes/topic").default;
 
             TopicRoute.reopen({
-                deactivate: function() {
-                    window.googletag.cmd.push(() => {
-                       window.googletag.pubads().refresh();
-                   });
-                    
+                activate: function() {
                     this._super();
+                    Em.run.next(function() {
+                        console.log("topic page opened");
+                        $("body").css(
+                            "background-color",
+                            "#" + ((Math.random() * 0xffffff) << 0).toString(16)
+                        );
+                    });
+                }
+                deactivate: function() {
+                    this._super();
+                     Em.run.next(function() {
+                        window.googletag.cmd.push(() => {
+                           window.googletag.pubads().refresh();
+                        });
+                    }
                 }
             });
             </script>
