--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -31,6 +31,12 @@
                     }
                 }
             });
+
+            api.onPageChange((url) => {
+                 window.googletag.cmd.push(() => {
+                    window.googletag.pubads().refresh();
+                });
+            });
             </script>
         {{else if divId_db}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
