--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -11,9 +11,11 @@
             </div>
             <script type="text/discourse-plugin">
             api.onPageChange((url) => {
-                 window.googletag.cmd.push(() => {
-                    window.googletag.pubads().refresh();
-                });
+                if (url) {
+                     window.googletag.cmd.push(() => {
+                        window.googletag.pubads().refresh();
+                    });
+                }
             });
             </script>
         {{else if divId_db}}
