Adding Mobile Ads

--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -1,13 +1,21 @@
 {{#if showAd}}
     {{#if site.mobileView}}
-        <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
-        <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-        </div>
-    {{else}}
         {{#if divId_da}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-            <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_A');});}</script>
+                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_A');});}</script>
+            </div>
+            <script type="text/discourse-plugin">
+            </script>
+        {{else if divId_db}}
+            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
+            <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
+                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_B');});}</script>
+            </div>
+        {{else if divId_dc}}
+            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
+            <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
+                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_C');});}</script>
             </div>
             <script type="text/discourse-plugin">
             api.onPageChange((url) => {
@@ -17,6 +25,20 @@
                     });
                 }
             });
+            </script>
+        {{else if divId_dd}}
+            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
+            <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
+                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_D');});}</script>
+            </div>
+        {{/if}}
+    {{else}}
+        {{#if divId_da}}
+            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
+            <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
+            <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_A');});}</script>
+            </div>
+            <script type="text/discourse-plugin">
             </script>
         {{else if divId_db}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
