--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -3,7 +3,7 @@
         {{#if isMobile}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_A');});}</script>
+                <script>if(detectWidth() < 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_A');});}</script>
             </div>
             <script type="text/discourse-plugin">
             </script>
@@ -19,7 +19,7 @@
         {{#if isMobile}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_B');});}</script>
+                <script>if(detectWidth() < 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_B');});}</script>
             </div>
         {{else}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
@@ -31,7 +31,7 @@
         {{#if isMobile}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_C');});}</script>
+                <script>if(detectWidth() < 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_C');});}</script>
             </div>
             <script type="text/discourse-plugin">
             api.onPageChange((url) => {
@@ -61,7 +61,7 @@
         {{#if isMobile}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
-                <script>if(detectWidth() <= 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_D');});}</script>
+                <script>if(detectWidth() < 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_D');});}</script>
             </div>
         {{else}}
             <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
