--- a/assets/javascripts/discourse/templates/components/community-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/community-ad.hbs
@@ -1,14 +1,13 @@
 {{#if showAd}}
     {{#if divId_da}}
         {{#if isMobileDevice}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
+            <!--<div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>-->
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(980 >= detectWidth()){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_A');});}</script>
             </div>
             <script type="text/discourse-plugin">
             </script>
         {{else}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_A');});}</script>
             </div>
@@ -17,19 +16,16 @@
         {{/if}}
     {{else if divId_db}}
         {{#if isMobileDevice}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(980 >= detectWidth()){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_B');});}</script>
             </div>
         {{else}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_B');});}</script>
             </div>
         {{/if}}
     {{else if divId_dc}}
         {{#if isMobileDevice}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(980 >= detectWidth()){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_C');});}</script>
             </div>
@@ -43,7 +39,6 @@
             });
             </script>
         {{else}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_C');});}</script>
             </div>
@@ -59,12 +54,10 @@
         {{/if}}
     {{else if divId_dd}}
         {{#if isMobileDevice}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(980 >= detectWidth()){googletag.cmd.push(function() {googletag.display('div-ad-Community_Mobile_300x250_D');});}</script>
             </div>
         {{else}}
-            <div class="community-ad-label"><h2>{{i18n 'adplugin.advertisement_label'}}</h2></div>
             <div id={{divId}} style={{adWrapperStyle}} class="dfp-ad-unit" align=center>
                 <script>if(detectWidth() > 980){googletag.cmd.push(function() {googletag.display('div-ad-Community_Desktop_Leaderboard_D');});}</script>
             </div>
